fixed issue where frontend wouldn't be centered on smaller window breakpoints because ButtonContainer was in too small of a grid area

--- a/src/components/ButtonContainer/ButtonContainer.css
+++ b/src/components/ButtonContainer/ButtonContainer.css
@@ -1,7 +1,7 @@
 .button-container-root {
     display: flex;
     justify-content: flex-end;
-    grid-column: 2 / 4;
+    grid-column: 1 / 4;
 }
 
 .button-container-button {
